--- a/fly.toml
+++ b/fly.toml
@@ -1,2 +1,34 @@
+# fly.toml app configuration file generated for maily on 2025-06-06T10:41:36+08:00
+#
+# See https://fly.io/docs/reference/configuration/ for information about how to use this file.
+#
+
+app = 'maily'
+primary_region = 'sin'
+
 [build]
-    dockerfile = "Dockerfile"
+  dockerfile = 'Dockerfile'
+
+[[vm]]
+  memory = '1gb'
+  cpu_kind = 'shared'
+  cpus = 1
+
+[[services]]
+  protocol = 'tcp'
+  internal_port = 5000
+
+  [[services.ports]]
+    port = 80
+    handlers = ['http']
+
+  [[services.ports]]
+    port = 443
+    handlers = ['http', 'tls']
+
+  [services.http_checks]
+    interval = '30s'
+    timeout = '10s'
+    grace_period = '10s'
+    method = 'GET'
+    path = '/health'
