--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,15 @@
+Flask==2.3.3
+notion-client==2.0.0
+openai==0.28.1
+requests==2.31.0
 python-dotenv==1.0.0
-notion-client==1.0.0
-numpy==1.24.3
-pandas==2.0.3
 tqdm==4.66.1
 retry==0.9.2
-requests==2.31.0
 beautifulsoup4==4.12.2
-openai==0.28.1
-html5lib==1.1
-gunicorn==20.1.0
+lxml==4.9.3
+gunicorn==21.2.0
+gevent==23.9.1
 
-Flask==2.2.5 
+numpy==1.24.3
+pandas==2.0.3
+html5lib==1.1 
